--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "dev": "nodemon server.js",
